--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -1,6 +1,11 @@
 ja:
   activerecord:
+    models:
+      user: ユーザー
+ja:
+  activerecord:
     attributes:
-      event:
-        Email: メールアドレス
-        Password: パスワード
+      user:
+        name: 名前
+        email: メールアドレス
+        password: パスワード
