--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -4,8 +4,6 @@ ja:
       user: ユーザー
       attendance_time: 勤怠情報
       apply_vacation: 休暇申請
-ja:
-  activerecord:
     attributes:
       user:
         name: 名前
@@ -13,6 +11,10 @@ ja:
         password: パスワード
         role: 役割
         paid_holiday_count: 残有給数
+        role_status:
+          - 管理者
+          - 社員
+          - アルバイト
       attendance_time:
         user_id: ユーザーID
         work_date: 出勤日
@@ -25,15 +27,57 @@ ja:
         authorizer_id: 承認者ユーザーID
         status: 状態
         applicant_id: 申請者ユーザーID
-ja:
   messages:
-    need_login: 'ログインが必要です'
-    login_success: 'ログインしました'
-    login_failed: 'メールアドレスもしくはパスワードが間違っています'
-    save_success: '保存しました'
-    save_failed: '保存に失敗しました'
-    create: '作成しました'
-    edit: '編集しました'
-    delete: '削除しました'
-    user_edit_failed: 'パスワードが異なっています'
+    need_login: ログインが必要です
+    login_success: ログインしました
+    login_failed: メールアドレスもしくはパスワードが間違っています
+    save_success: 保存しました
+    save_failed: 保存に失敗しました
+    create: 作成しました
+    edit: 編集しました
+    delete: 削除しました
+    user_edit_failed: パスワードが異なっています
+  attend:
+    work_status:
+      - 出勤
+      - 有給休暇
+      - 午前休暇
+      - 午後休暇
+      - 休日出勤
+      - 欠勤
+      - 休日
+  apply:
+    apply_status:
+      - 申請中
+      - 上長承認済
+      - 管理者承認済
+      - 申請取消
+      - 不許可
+  table_header:
+    profile: プロフィール
+    menu:
+      - 勤怠状況一覧
+      - 出勤者リスト
+      - 有給休暇申請
+      - 有給申請確認
+      - ユーザー設定
+      - ユーザー管理
+      - ログアウト
+    sum:
+      - 出勤日数
+      - 稼働時間合計
+      - 休憩時間合計
+      - 有休取得数
+      - 休日出勤数
+      - 欠勤数
+      - 休日数
+    attendance:
+      - 日付
+      - 曜日
+      - 出勤時間
+      - 退勤時間
+      - 稼働時間
+      - 休憩時間
+      - 状態
+
 
