--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -79,5 +79,33 @@ ja:
       - 稼働時間
       - 休憩時間
       - 状態
-
-
+    csv_sum_header:
+      - 月別合計
+      - ユーザー名
+      - 権限
+      - 出勤日数
+      - 稼働時間合計
+      - 休憩時間合計
+      - 有休取得数
+      - 休日出勤
+      - 欠勤
+      - 休日
+      - 残有休数
+    csv_header:
+      - 日付
+      - 曜日
+      - 出勤時刻
+      - 退勤時刻
+      - 稼働時間
+      - 休憩時間
+      - 状態
+  holiday:
+    approve: 許可
+    dismiss: 却下
+    table_header:
+      - 申請日
+      - 申請者
+      - 消化日数
+      - 許可
+      - 却下
+      - 申請状況
